--- a/themes/landscape/layout/_partial/article.ejs
+++ b/themes/landscape/layout/_partial/article.ejs
@@ -15,10 +15,17 @@
         <%- post.excerpt %>
         <% if (theme.excerpt_link){ %>
           <p class="article-more-link">
-            <a href="<%- url_for(post.path) %>#more"><%= theme.excerpt_link %></a>
+              <a href="<%- url_for(post.path) %>#more"><%= theme.excerpt_link %></a>
           </p>
         <% } %>
       <% } else { %>
+	<!-- Table of Contents -->
+	<% if (!index && post.toc){ %>
+	    <div id="toc" class="toc-article">
+		<strong class="toc-title">文章目录</strong>
+		<%- toc(post.content) %>
+	    </div>
+	<% } %>
         <%- post.content %>
       <% } %>
     </div>
